# 8bandkp-fdm

./: .clinerules  .cursorrules  .gitignore  .gitmodules  1tail  CLAUDE.md  CMakeLists.txt  CONTEXT.md  Makefile  README.md  STRATEGY.md  UBIQUITOUS_LANGUAGE.md  agents.md  bulk.example  changelog.md  checklist.md  fpm.toml  gfactor.example  input.cfg  input.cfg.bkp  input.cfg.test  input_qw_k0.cfg  input_test.cfg  manual_test.cfg  modernization_plan.md  plan.md  plot_bands.gp  plot_bands.py  skills-lock.json  strained.cfg  test_bulk_cb_gaasw.cfg  test_bulk_vb.cfg  test_qw_cb.cfg
.claude/: settings.local.json.bkp
.scratch/: AGENTS.md
build-nolto/: .ninja_deps  .ninja_log  build.ninja
docs/: BUILD.md  DEPENDENCIES.md  GFACTOR.md  INPUT_FORMAT.md  PLOTTING.md  QUICKSTART.md  TROUBLESHOOTING.md  VALIDATION.md  convergence_framework.md
examples/: README.md  bulk_GaAs.example  bulk_InAs60Sb40.example  gfactor_analytical_bulk_GaAs.example  gfactor_analytical_test.example  gfactor_bulk_GaAs_numerical.example  (+36 more)
src/: CMakeLists.txt  defs.f90  gfactor_functions.f90  gfactor_functions_broken.f90  hamiltonianConstructor.f90  main.f90  main_gfactor.f90  mkl_spblas.f90  outputFunctions.f90  parameters.f90  perturbation_errors.f90  utils.f90
src/apps/: README.md  main.f90  main_gfactor.f90  main_optics.f90  main_topology.f90
src/core/: defs.f90  parameters.f90  simulation_setup.f90  utils.f90
src/io/: README.md  input_parser.f90  outputFunctions.f90
src/math/: AGENTS.md  README.md  eigensolver.f90  feast_call.f90  finitedifferences.f90  geometry.f90  linalg.f90  mkl_spblas.f90  pfaffian.f90  sparse_matrices.f90
src/physics/: AGENTS.md  README.md  bdg_hamiltonian.f90  bdg_observables.f90  charge_density.f90  confinement_init.f90  exciton.f90  gfactor_functions.f90  green_functions.f90  hamiltonianConstructor.f90  hamiltonian_blocks.f90  hamiltonian_qw.f90  hamiltonian_wire.f90  magnetic_field.f90  optical_spectra.f90  poisson.f90  sc_loop.f90  scattering.f90  spectral_bdg_wire.f90  spin_projection.f90  strain_pde.f90  strain_solver.f90  strain_types.f90  topological_analysis.f90  wire_setup.f90
tests/: CMakeLists.txt  README.md  fd_sign_compare  fd_sign_compare.f90  gpu_diag_test  gpu_diag_test.f90  run_tests.sh
tests/integration/: AGENTS.md  aggregate_star_benchmarks.py  convergence_helpers.py  coverage_matrix.py  plot_majorana_polarization_synthetic.py  plot_wire_bdg_2d_colormap.py  star_helpers.py  test_bdg_spectral.sh  test_bhz_z2.sh  test_bulk_bandstructure.sh  test_bulk_gfactor_analytical.sh  test_bulk_gfactor_numerical.sh  test_chern_qwz.sh  test_coarray_qw_sweep.f90  test_dense_qw_bdg_rung.sh  test_exciton_convergence.py  test_exciton_smoke.py  test_gfactor.sh  test_gfactor_no_optics.sh  test_landau_bulk.sh  test_landau_levels.sh  test_lecture_13_acceptance_gate.sh  test_majorana_polarization_size_mismatch.f90  test_majorana_polarization_size_mismatch.sh  test_qcse_no_ef.sh  test_qcse_with_ef.sh  test_qw_absorption_polarization.sh  test_qw_bandstructure.sh  test_qw_bandstructure_dense_feast.sh  test_qw_character_and_output_dir.sh  test_qw_fukane_z2.sh  test_qw_gfactor_analytical.sh  test_qw_grid_convergence.py  test_qw_optical_matrix_selection.sh  test_qw_optics_commutator.sh  test_qw_order_convergence.py  test_rashba_phase_boundary.sh  test_sc_bulk_doped.sh  test_sc_convergence.py  test_sc_loop.sh  (+65 more)
tests/regression/: compare_output.py  regenerate_references.py  test_wire_bdg_topological_2d.sh
tests/regression/configs/: bulk_gaas_k0.cfg  bulk_gaas_k0.toml  bulk_gaas_kx.toml  bulk_gaas_kx_dispersion.cfg  bulk_gaas_kx_dispersion.toml  bulk_gaas_kxky.cfg  bulk_gaas_kxky.toml  bulk_gaas_optics.cfg  bulk_gaas_optics.toml  bulk_gaas_strained.cfg  bulk_gaas_strained.toml  bulk_gasb_k0.cfg  bulk_gasb_k0.toml  bulk_gasb_kx_dispersion.cfg  bulk_gasb_kx_dispersion.toml  bulk_gasbw_k0.cfg  bulk_gasbw_k0.toml  bulk_inas_k0.cfg  bulk_inas_k0.toml  bulk_inas_kx.cfg  bulk_inas_kx.toml  bulk_inas_kx_dispersion.cfg  bulk_inas_kx_dispersion.toml  bulk_insb_k0.cfg  bulk_insb_k0.toml  bulk_insb_kx_dispersion.cfg  bulk_insb_kx_dispersion.toml  exciton_gaas_algaas.cfg  exciton_gaas_algaas.toml  gfactor_bulk_gaas_cb.toml  gfactor_bulk_gaas_vb.toml  gfactor_bulk_gaasw_cb.toml  gfactor_bulk_gasb_cb.toml  gfactor_bulk_inasw_cb.cfg  gfactor_bulk_inasw_cb.toml  gfactor_bulk_insb_cb.cfg  gfactor_bulk_insb_cb.toml  gfactor_qw_cb.toml  gfactor_qw_inas_gaas_strained.cfg  gfactor_qw_inas_gaas_strained.toml  (+140 more)
tests/regression/data/gfactor_bulk_gaas_vb/: output.txt
tests/regression/data/gfactor_bulk_gaasw_cb/: output.txt
tests/regression/data/gfactor_qw_cb/: output.txt
tests/regression/data/gfactor_qw_vb/: output.txt
tests/regression/data/sc_wire_gaas/: output.txt
tests/regression/data/wire_gaas_hexagon/: output.txt
tests/regression/data/wire_insb_gfactor/: output.txt
tests/support/: CMakeLists.txt  csr_test_helpers.f90  generate_krylov_reference.f90  krylov_helpers.f90  krylov_reference_data.f90  regenerate_references.sh  trk_helpers.f90
tests/unit/: test_bdg_config.pf  test_bdg_evaluator.pf  test_bdg_hamiltonian.pf  test_bdg_kitaev_majorana.pf  test_bdg_pfaffian_witness_csr.pf  test_bdg_phs.pf  test_charge_density.pf  test_chern_number.pf  test_confinement_assembly.pf  test_cross_builder_hole_block_identity.pf  test_csr_helpers.pf  test_csr_spmv.pf  test_csr_structural.pf  test_defs.pf  test_dense_qw_block_21_sign.pf  test_edge_states.pf  test_eigensolver.pf  test_fd_convergence.pf  test_finitedifferences.pf  test_geometry.pf  test_green_functions.pf  test_hamiltonian.pf  test_hamiltonian_2d.pf  test_hamiltonian_blocks.pf  test_input_parsing.sh  test_kitaev_majorana.pf  test_kitaev_strict.pf  test_krylov_helpers.pf  test_krylov_snapshots.pf  test_landau.pf  test_magnetic_field.pf  test_majorana_polarization.pf  test_majorana_polarization_soc.pf  test_optical.pf  test_optical_qw.pf  test_optical_spectra.pf  test_output_format.sh  test_pairing_sign_cross_module.pf  test_parameters.pf  test_pfaffian.pf  (+13 more)
tests/validation/: test_gfactor_consistency.sh  test_physical_values.sh
(+484 files in other folders)
